fix(exhibition)：修复展览角色位置预览回弹与图片提示越界。